# experiments

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  analysis_options.yaml  build.sh  cmake_install.cmake  compile_with_docker.sh  pubspec.yaml  remove_old_build.sh  send_and_update.sh  send_build.sh  tachyon_config.yaml
.build/: experiments.app
example/: experiments_example.dart
lib/: experiments.dart
lib/src/: base_scheduler.dart  scheduler.dart
lib/src/schedulers/barefoot_running/: barefoot_running_config.dart  barefoot_running_scheduler.dart
lib/src/schedulers/barefoot_running/running/: run.dart  run.gen.dart
lib/src/schedulers/coding_projects/: coding_project_content.dart  coding_project_preparation_content.dart  coding_projects_config.dart  coding_projects_scheduler.dart
lib/src/types/scheduling/: constraints.dart  constraints.gen.dart  non_scheduled_block.dart  non_scheduled_block.gen.dart  week_time_config.dart  week_time_config.gen.dart
src/: CMakeLists.txt  Makefile  app.cpp  app.hpp  cmake_install.cmake  lv_conf.h  main.cpp
test/: experiments_test.dart
